--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - cd gatorgrader
   - pip3 install --upgrade pip
   - pip3 install -r requirements.txt --cache-dir $HOME/.pip-cache
+  - python3 -m nltk.downloader punkt
   - cd ..
 
 # cache to improve build speed
